@@ -10,6 +10,7 @@ module Moneta
       :marshal  => [ :serialize, '::Marshal.load(%s)',           '::Marshal.dump(%s)'                               ],
       :msgpack  => [ :serialize, '::MessagePack.unpack(%s)',     '::MessagePack.pack(%s)',          'msgpack'       ],
       :ox       => [ :serialize, '::Ox.parse_obj(%s)',           '::Ox.dump(%s)',                   'ox'            ],
+      :php      => [ :serialize, '::PHP.unserialize(%s)',        '::PHP.serialize(%s)',           'php_serialize' ],
       :tnet     => [ :serialize, '::TNetstring.parse(%s).first', '::TNetstring.dump(%s)',           'tnetstring'    ],
       :yaml     => [ :serialize, '::YAML.load(%s)',              '::YAML.dump(%s)',                 'yaml'          ],
       :bzip2    => [ :compress,  '::Bzip2.uncompress(%s)',       '::Bzip2.compress(%s)',            'bzip2'         ],
@@ -19,13 +20,13 @@ module Moneta
       :snappy   => [ :compress,  '::Snappy.inflate(%s)',         '::Snappy.deflate(%s)',            'snappy'        ],
       :quicklz  => [ :compress,  '::QuickLZ.decompress(%s)',     '::QuickLZ.compress(%s)',          'qlzruby'       ],
       :zlib     => [ :compress,  '::Zlib::Inflate.inflate(%s)',  '::Zlib::Deflate.deflate(%s)',     'zlib'          ],
-      :hex      => [ :encode,    "[%s].pack('H*')",              "%s.unpack('H*').first"                            ],
-      :qp       => [ :encode,    "%s.unpack('M').first",         "[%s].pack('M')"                                   ],
-      :uuencode => [ :encode,    "%s.unpack('u').first",         "[%s].pack('u')"                                   ],
       :base64   => RUBY_VERSION > '1.9' ?
                    [ :encode,    "%s.unpack('m0').first",        "[%s].pack('m0')"                                  ] :
                    [ :encode,    "%s.unpack('m').first",         "[%s].pack('m').gsub(\"\n\", '')"                  ],
       :escape   => [ :encode,    'Helper.unescape(%s)',          'Helper.escape(%s)'                                ],
+      :hex      => [ :encode,    "[%s].pack('H*')",              "%s.unpack('H*').first"                            ],
+      :qp       => [ :encode,    "%s.unpack('M').first",         "[%s].pack('M')"                                   ],
+      :uuencode => [ :encode,    "%s.unpack('u').first",         "[%s].pack('u')"                                   ],
       :hmac     => [ :hmac,      'Helper.hmacverify(%s, options[:secret] || @secret)',
                                  'Helper.hmacsign(%s, options[:secret] || @secret)',                'openssl'       ],
       :truncate => [ :truncate,  nil,                            'Helper.truncate(%s, @maxlen)',    'digest/md5'    ],
