@@ -827,6 +827,19 @@ it 'compile transformer class' do
   Moneta::Transformer::OxKeyOxValue.should_not be_nil
 end}
   },
+  'transformer_php' => {
+    :build => %{Moneta.build do
+  use :Transformer, :key => :php, :value => :php
+  adapter :Memory
+end},
+    :specs => TRANSFORMER_SPECS.simplekeys_only.simplevalues_only,
+    :load_value => '::PHP.unserialize(value)',
+    :tests => %{
+it 'compile transformer class' do
+  store.should_not be_nil
+  Moneta::Transformer::PhpKeyPhpValue.should_not be_nil
+end}
+  },
   'transformer_tnet' => {
     :build => %{Moneta.build do
  use :Transformer, :key => :tnet, :value => :tnet
