@@ -1,0 +1,54 @@
+# Generated by generate-specs
+require 'helper'
+
+describe_moneta "transformer_php" do
+  def features
+    [:create, :increment]
+  end
+
+  def new_store
+    Moneta.build do
+      use :Transformer, :key => :php, :value => :php
+      adapter :Memory
+    end
+  end
+
+  def load_value(value)
+    ::PHP.unserialize(value)
+  end
+
+  include_context 'setup_store'
+  it_should_behave_like 'create'
+  it_should_behave_like 'features'
+  it_should_behave_like 'increment'
+  it_should_behave_like 'null_stringkey_stringvalue'
+  it_should_behave_like 'null_stringkey_hashvalue'
+  it_should_behave_like 'null_stringkey_integervalue'
+  it_should_behave_like 'null_hashkey_stringvalue'
+  it_should_behave_like 'null_hashkey_hashvalue'
+  it_should_behave_like 'null_hashkey_integervalue'
+  it_should_behave_like 'null_integerkey_stringvalue'
+  it_should_behave_like 'null_integerkey_hashvalue'
+  it_should_behave_like 'null_integerkey_integervalue'
+  it_should_behave_like 'returndifferent_stringkey_stringvalue'
+  it_should_behave_like 'returndifferent_stringkey_hashvalue'
+  it_should_behave_like 'returndifferent_hashkey_stringvalue'
+  it_should_behave_like 'returndifferent_hashkey_hashvalue'
+  it_should_behave_like 'returndifferent_integerkey_stringvalue'
+  it_should_behave_like 'returndifferent_integerkey_hashvalue'
+  it_should_behave_like 'store_stringkey_stringvalue'
+  it_should_behave_like 'store_stringkey_hashvalue'
+  it_should_behave_like 'store_stringkey_integervalue'
+  it_should_behave_like 'store_hashkey_stringvalue'
+  it_should_behave_like 'store_hashkey_hashvalue'
+  it_should_behave_like 'store_hashkey_integervalue'
+  it_should_behave_like 'store_integerkey_stringvalue'
+  it_should_behave_like 'store_integerkey_hashvalue'
+  it_should_behave_like 'store_integerkey_integervalue'
+  it_should_behave_like 'store_large'
+  it_should_behave_like 'transform_value'
+  it 'compile transformer class' do
+    store.should_not be_nil
+    Moneta::Transformer::PhpKeyPhpValue.should_not be_nil
+  end
+end
