@@ -4,6 +4,7 @@ master
 * Moneta.new(:Couch, :Riak, :RestClient): use urlencode instead of base64 for key encoding)
 * Transformer: Add :hex encoder
 * Transformer: Don't wrap object in array for JSON serialization
+* Transformer: Add :php serializer
 * Moneta.new(:Sequel) - Don't encode blob data using base64
 
 0.7.19
